CREATE TABLE admissions (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id          BIGINT NOT NULL,
    hospital_service_id BIGINT NOT NULL,
    admitted_at         TIMESTAMP NOT NULL,
    discharged_at       TIMESTAMP,
    status              VARCHAR(20) NOT NULL,
    discharge_reason    VARCHAR(255),
    created_at          TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE transfer_requests (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    admission_id        BIGINT NOT NULL REFERENCES admissions(id),
    from_service_id     BIGINT NOT NULL,
    to_service_id       BIGINT NOT NULL,
    requested_at        TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    reason              VARCHAR(255)
);

CREATE TABLE emergency_visits (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id          BIGINT NOT NULL,
    arrived_at          TIMESTAMP NOT NULL,
    ended_at            TIMESTAMP,
    status              VARCHAR(20) NOT NULL,
    triage_notes        VARCHAR(500),
    created_at          TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_admissions_patient ON admissions(patient_id);
CREATE INDEX idx_admissions_status ON admissions(status);
CREATE INDEX idx_emergency_patient ON emergency_visits(patient_id);
