CREATE TABLE stays (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id      BIGINT NOT NULL,
    admission_id    BIGINT NOT NULL UNIQUE,
    check_in_at     TIMESTAMP NOT NULL,
    check_out_at    TIMESTAMP,
    room_label      VARCHAR(40),
    bed_label       VARCHAR(40),
    status          VARCHAR(20) NOT NULL,
    created_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE hospitalization_forms (
    stay_id           BIGINT NOT NULL PRIMARY KEY REFERENCES stays(id) ON DELETE CASCADE,
    chief_complaint   VARCHAR(500),
    history_text      VARCHAR(4000),
    allergies         VARCHAR(500),
    updated_at        TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_stays_patient ON stays(patient_id);
CREATE INDEX idx_stays_status ON stays(status);
