@startuml MODELE_DOMAINE_CARE_ENTRY_SERVICE
title "Modèle du domaine — care-entry-service (BDD afya_care_entry :5436)"
skinparam classAttributeIconSize 0
skinparam linetype ortho

database "PostgreSQL\nafya_care_entry" as DB

package "afya_care_entry" {

  class admissions <<table>> {
    id : BIGINT «PK»
    patient_id : BIGINT
    hospital_service_id : BIGINT
    admitted_at : TIMESTAMP
    discharged_at : TIMESTAMP
    status : VARCHAR(20)
    discharge_reason : VARCHAR(255)
    admission_reason : VARCHAR(255)
    created_at : TIMESTAMP
  }

  class transfer_requests <<table>> {
    id : BIGINT «PK»
    admission_id : BIGINT «FK»
    from_service_id : BIGINT
    to_service_id : BIGINT
    requested_at : TIMESTAMP
    reason : VARCHAR(255)
  }

  class emergency_visits <<table>> {
    id : BIGINT «PK»
    patient_id : BIGINT
    arrived_at : TIMESTAMP
    ended_at : TIMESTAMP
    status : VARCHAR(20)
    triage_notes : VARCHAR(500)
    priority : VARCHAR(5)
    triage_level : VARCHAR(20)
    orientation : VARCHAR(120)
    created_at : TIMESTAMP
  }

  class emergency_visit_timeline_events <<table>> {
    id : BIGINT «PK»
    emergency_visit_id : BIGINT «FK»
    event_type : VARCHAR(40)
    details : VARCHAR(500)
    created_at : TIMESTAMP
  }

  class vital_sign_readings <<table>> {
    id : BIGINT «PK»
    admission_id : BIGINT «FK»
    recorded_at : TIMESTAMP
    slot : VARCHAR(20)
    systolic_bp : INT
    diastolic_bp : INT
    pulse_bpm : INT
    temperature_celsius : DECIMAL(5,2)
    weight_kg : DECIMAL(6,2)
    diuresis_ml : INT
    stools_note : VARCHAR(500)
  }

  admissions "1" *-- "0..*" transfer_requests
  admissions "1" *-- "0..*" vital_sign_readings
  emergency_visits "1" *-- "0..*" emergency_visit_timeline_events
}

admissions --> DB
transfer_requests --> DB
emergency_visits --> DB
emergency_visit_timeline_events --> DB
vital_sign_readings --> DB

class "patient-service\npatients" as ExtPat <<external>>
class "catalog-service\nhospital_services" as ExtCat <<external>>
class "stay-service\nstays" as ExtStay <<external>>

admissions ..> ExtPat : patient_id
admissions ..> ExtCat : hospital_service_id
emergency_visits ..> ExtPat : patient_id
admissions ..> ExtStay : admission_id

@enduml
